--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 
-group = 'org.example'
+group = 'com.watywka'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -30,6 +31,6 @@ jar {
 }
 
 application {
-    mainClass = 'org.example.Main'
+    mainClass = 'com.watywka.Main'
 }
 
